Refactor services
remove SimpleCrudService interface
replace entity in param to dto interfaces